WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311980
REGRESSION(
300173@main
): invert filter not applied to exported PDF
https://bugs.webkit.org/show_bug.cgi?id=311980
Summary
REGRESSION(300173@main): invert filter not applied to exported PDF
Brad West
Reported
2026-04-10 15:19:48 PDT
Created
attachment 479000
[details]
Test case with html and image Open the attached test case, which includes a simple bit of html and a black image. - Row one of the test case includes the default black-on-white color scheme and a black decorative image - On row two, the color scheme is switched to white-on-black and the decorative image is switched to white with the invert() filter This all appears as expected in the browser. When exported to PDF, however, the invert filter is not applied to the image, which is no longer visible on the black background. I'll add screenshots of the test case in the browser and the generated PDF in Preview, as well as the PDF itself. This regression seems to have happened at some point in Safari 26 development, but I'm not sure when. This works as expected in apps that use WebKit on Sequoia, and I've verified it works as expected in Safari 17.
Attachments
Test case with html and image
(3.29 KB, application/zip)
2026-04-10 15:19 PDT
,
Brad West
no flags
Details
Screenshot of test case in Safari
(79.45 KB, image/png)
2026-04-10 15:20 PDT
,
Brad West
no flags
Details
Screenshot of PDF exported from Safari 26, as seen in Preview
(126.17 KB, image/png)
2026-04-10 15:21 PDT
,
Brad West
no flags
Details
PDF exported from Safari 26
(15.45 KB, application/pdf)
2026-04-10 15:22 PDT
,
Brad West
no flags
Details
PDF exported from Safari 17
(15.86 KB, application/pdf)
2026-04-10 15:22 PDT
,
Brad West
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Brad West
Comment 1
2026-04-10 15:20:52 PDT
Created
attachment 479001
[details]
Screenshot of test case in Safari
Brad West
Comment 2
2026-04-10 15:21:35 PDT
Created
attachment 479002
[details]
Screenshot of PDF exported from Safari 26, as seen in Preview
Brad West
Comment 3
2026-04-10 15:22:35 PDT
Created
attachment 479003
[details]
PDF exported from Safari 26
Brad West
Comment 4
2026-04-10 15:22:54 PDT
Created
attachment 479004
[details]
PDF exported from Safari 17
Alexey Proskuryakov
Comment 5
2026-04-11 10:35:30 PDT
Thank you for the report! I can reproduce with Safari 26.5 beta.
Radar WebKit Bug Importer
Comment 6
2026-04-11 10:35:36 PDT
<
rdar://problem/174565635
>
Abrar Rahman Protyasha
Comment 7
2026-04-13 10:03:41 PDT
Does not reproduce with Safari 18.6
Said Abou-Hallawa
Comment 8
2026-04-13 14:33:49 PDT
This bug will not reproduce if the feature `GraphicsContext Filter Rendering` is turned off. CSS filters such as `invert()` were changed to use `FEColorMatrix` and CG filters in
300173@main
. So this bug is a regression of this change.
Nipun Shukla
Comment 9
2026-05-05 11:00:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64283
EWS
Comment 10
2026-05-08 11:36:27 PDT
Committed
312906@main
(ce508eb8d84b): <
https://commits.webkit.org/312906@main
> Reviewed commits have been landed. Closing PR #64283 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug