REGRESSION(300173@main): invert filter not applied to exported PDF https://bugs.webkit.org/show_bug.cgi?id=311980 rdar://174565635

Reviewed by Said Abou-Hallawa and Abrar Rahman Protyasha.

After 300173@main, filter: invert() translates to FEColorMatrix
which does not correctly apply during the PDF printing context.

Gate the GraphicsContext filter rendering mode off for PDF destinations so
the filter falls back to the software ImageBufferContextSwitcher path.

Test: Tools/TestWebKitAPI/Tests/WebKit/WKWebView/DrawingToPDF.mm

* Source/WebCore/page/Page.cpp:
(WebCore::Page::preferredFilterRenderingModes const):
* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/DrawingToPDF.mm:
(TestWebKitAPI::TEST(DrawingToPDF, CSSFilterInvertAppliedOnPDF)):

Canonical link: https://commits.webkit.org/312906@main